@@ -18,6 +18,7 @@ package com.google.zxing.spring.boot;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.util.Base64;
 import java.util.zip.GZIPInputStream;
 import java.util.zip.GZIPOutputStream;
 import java.util.zip.ZipEntry;
@@ -53,7 +54,7 @@ public class ZipUtils {
         }
 
 
-        return new sun.misc.BASE64Encoder().encode(out.toByteArray());
+        return Base64.getEncoder().encodeToString(out.toByteArray());
     }
 
     /**
@@ -73,7 +74,7 @@ public class ZipUtils {
         byte[] compressed = null;
         String decompressed = null;
         try {
-            compressed = new sun.misc.BASE64Decoder().decodeBuffer(compressedStr);
+            compressed = Base64.getDecoder().decode(compressedStr);
             in = new ByteArrayInputStream(compressed);
             ginzip = new GZIPInputStream(in);
 
@@ -129,7 +130,7 @@ public class ZipUtils {
             zout.write(str.getBytes());
             zout.closeEntry();
             compressed = out.toByteArray();
-            compressedStr = new sun.misc.BASE64Encoder().encodeBuffer(compressed);
+            compressedStr = Base64.getEncoder().encodeToString(compressed);
         } catch (IOException e) {
             compressed = null;
         } finally {
@@ -165,7 +166,7 @@ public class ZipUtils {
         ZipInputStream zin = null;
         String decompressed = null;
         try {
-            byte[] compressed = new sun.misc.BASE64Decoder().decodeBuffer(compressedStr);
+            byte[] compressed = Base64.getDecoder().decode(compressedStr);
             out = new ByteArrayOutputStream();
             in = new ByteArrayInputStream(compressed);
             zin = new ZipInputStream(in);
